--- a/privacy-policy.html
+++ b/privacy-policy.html
@@ -173,289 +173,62 @@
    <!-- header end -->
 
 
-   <!-- banner sction start -->
-   <div class="banner-section-wrapper float_left">
-      <div class="container">
-         <div class="row">
-            <div class="col-lg-6 col-md-12  col-sm-12 col-12">
-               <div class="sb-banner-section ds-home-banner">
-                  <a href="home">
-                     <img src="assets/images/Dental_stories_logo_ps_2_2.png" class="ds-m-logo banner-logo" alt="img">
-                  </a>
-                  <!-- <h4 class="ds-a text-white">Everything starts with a smile</h4> -->
-                  <!-- <h2 class="wow fadeIn ds-a text-white" data-wow-duration="2s" data-wow-delay=".5ms">Let’s take care of it. </h2> -->
-                  <a href="book-appointment">
-                     <button  class="button-btn mt-4 ds-a">Make an appointment
-                        <span><i class="fas fa-angle-double-right"></i></span>
-                     </button>
-                  </a>
-               </div>
+   <div class="pp-3s">
+    <div class="container">
+        <div class="row mainrow1">
+            <div class="col-lg-12 maincol2 ab1">
+                <h2 class="ab-th1">Privacy Policy</h2>
+                <h5>Introduction</h5>
+                <p class="ab-th2 ds-a">Welcome to Dental Stories, an online platform where users can share and read stories and experiences related to dental health. At Dental Stories, we are committed to protecting your privacy and ensuring the security of your personal information. This Privacy Policy outlines how we collect, use, 
+                    disclose, and safeguard your personal information when you visit our website or use our services.</p>
+                <p class="ab-th2 ds-a">By accessing or using the Dental Stories website and its services, you consent to the practices described in this Privacy Policy. 
+                    If you do not agree with our practices, please do not use our Site or Services.</p>
             </div>
-         </div>
-      </div>
-   </div>
-   <!-- banner section end-->
-
-   <!-- About section start-->
-   <!-- <div class="about-main-wrapper float_left">
-      <div class="container">
-         <div class="row plr-50">
-            <div class="col-lg-4 col-md-4 col-sm-12">
-               <div class="sb-about-section ">
-                  <div class="icon">01
-                  </div>
-                  <div class="content">
-                     <h5 class="ds-a">Experienced Dental Professionals.</h5>
-                  </div>
-               </div>
+            <div class="col-lg-12 maincol2 ab1">
+                <h5>Private information</h5>
+                <p class="ab-th2 ds-a">We may collect and store the following types of information when you use our Site and Services:</p>
+                <p class="ab-th2 ds-a">
+                    <ol>
+                        <li>Name</li>
+                        <li>Email address</li>
+                        <li>Username and password (if you create an account)</li>
+                        <li> Profile information (if you choose to provide it)</li>
+                        <li>Communications you send to us (e.g., feedback, comments, or questions)</li>
+                    </ol>
+                </p>
+                <p class="ab-th2 ds-a">Automatically Collected Information: </p>
+                <p class="ab-th2 ds-a">
+                    <ol>
+                        <li>Log Files: Information about your device, IP address, browser type, and operating system</li>
+                        <li>Cookies and similar tracking technologies: See our Cookie Policy for more information</li>
+                    </ol>
+                </p>
             </div>
-            <div class="col-lg-4 col-md-4 col-sm-12">
-               <div class="sb-about-section">
-                  <div class="icon">02
-                  </div>
-                  <div class="content">
-                     <h5 class="ds-a">Prioritizing oral health.</h5>
-                  </div>
-               </div>
+            <div class="col-lg-12 maincol2 ab1">
+                <h5>How We Use Your Information</h5>
+                <p class="ab-th2 ds-a">We may share your information with: </p>
+                <p class="ab-th2 ds-a">
+                    <ol>
+                        <li>Service providers: Third-party service providers who help us operate, improve, and protect our Site and Services</li>
+                        <li>Legal authorities: To comply with legal obligations, such as responding to legal requests and preventing fraud</li>
+                        <li>Affiliates and partners: With your consent, we may share your information with trusted affiliates and partners for marketing or promotional purposes</li>
+                    </ol>
+                </p>
             </div>
-            <div class="col-lg-4 col-md-4 col-sm-12">
-               <div class="sb-about-section">
-                  <div class="icon">03
-                  </div>
-                  <div class="content">
-                     <h5 class="ds-a">For stories that end with a smile.</h5>
-               </div>
+            <div class="col-lg-12 maincol2 ab1">
+                <h5>Your Choices  </h5>
+                <p class="ab-th2 ds-a">You can manage your personal information and communication preferences as follows:  </p>
+                <p class="ab-th2 ds-a">
+                    <ol>
+                        <li>Account settings: You can access and update your account information through your account settings.</li>
+                        <li>Legal authorities: To comply with legal obligations, such as responding to legal requests and preventing fraud</li>
+                        <li>Affiliates and partners: With your consent, we may share your information with trusted affiliates and partners for marketing or promotional purposes</li>
+                    </ol>
+                </p>
             </div>
-         </div>
-      </div>
-   </div> -->
-   <!-- About us section end -->
-   
-   <!-- image about section start-->
-   <div class="image-about-wrapper float_left">
-      <div class="container ">
-         <div class="row plr-50">
-            <div class="col-lg-6 col-md-12">
-               <div class="image-section ps-rel ">
-                  <img src="assets/images/dental-stories-about-us-sec-1.png" class="image-section-au" alt="img">
-               </div>
-            </div>
-            <div class="col-lg-6 col-md-12 col-sm-12 col-12">
-               <div class="about-content ">
-                  <h6 class="home1-section-heading1 text-start">About Us</h6>
-                  <h4>We believe every story starts with a smile</h4>
-                  <p class="py-3 ds-p">Dental Stories is a Dental Clinic owned by Dr. Jenish Parmar and Dr. Poonam Sarda, both specializing in Conservative Dentistry 
-                     and Endodontics. We do our small part of taking care of your oral health so that you can share your stories with a bright smile.</p>
-                  <p class="py-2 ds-p">We are a team of dedicated dental professionals committed to providing exceptional oral healthcare services to our patients. With 
-                     10+ years of experience and a passion for dentistry, we strive to create a hospitable environment with personalized care for your dental needs.</p>
-                  <!-- <p>
-                     Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
-                  </p> -->
-                  <a href="contact" class="uybs-a">
-                     <button class="button-btn mt-4">UNLOCK A BETTER SMILE
-                        <span><i class="fas fa-angle-double-right"></i></span>
-                     </button>
-                  </a>
-               </div>
-            </div>
-         </div>
-      </div>
-   </div>
-   <!-- image about section end-->
-
-   <!-- secvices section start  -->
-   <div class="services-main-wrapper float_left">
-      <div class="container">
-         <div class="row">
-            <div class="col-lg-12 col-md-12">
-               <div class="sb-service-section">
-                  <h6 class="home1-section-heading1">Treatments</h6>
-                  <h5 class="home1-section-heading2 ds-a">Transform Your Oral Health</h5>
-                  <p class="ds-a"> Experience Top-notch Dentistry at Our Clinic </p>
-                  <div class="slider-service-section">
-                     <div class="owl-carousel owl-theme">
-                        <div class="item wow fadeInUp" data-wow-delay=".15s">
-                           <div class="slider-box">
-                              <h5 class="ds-a">Endodontics Dentistry</h5>
-                              <p class="ds-a">Regular dental check-ups, cleanings, and examinations promote optimal oral health.</p>
-                              <button type="button" data-bs-toggle="modal" data-bs-target="#enquireformModalCenter" class="button-btn mt-4">book now
-                                 <span><i class="fas fa-angle-double-right"></i></span>
-                              </button>
-                           </div>
-                        </div>
-                        <div class="item">
-                           <div class="slider-box wow fadeInUp" data-wow-delay=".25s">
-                              <h5 class="ds-a">Conservative Dentistry</h5>
-                              <p class="ds-a">Passionate about smile enhancement through cosmetic dental treatments.
-                              </p>
-                              <button type="button" data-bs-toggle="modal" data-bs-target="#enquireformModalCenter" class="button-btn mt-4">book now
-                                 <span><i class="fas fa-angle-double-right"></i></span>
-                              </button>
-                           </div>
-                        </div>
-                        <div class="item">
-                           <div class="slider-box wow fadeInUp" data-wow-delay=".35s">
-                              <h5 class="ds-a">Pediatric Dentistry</h5>
-                              <p class="ds-a"> Pediatric dentists offer compassionate, positive dental care for children.</p>
-                              <button type="button" data-bs-toggle="modal" data-bs-target="#enquireformModalCenter" class="button-btn mt-4">book now
-                                 <span><i class="fas fa-angle-double-right"></i></span>
-                              </button>
-                           </div>
-                        </div>
-                     </div>
-                  </div>
-               </div>
-            </div>
-         </div>
-      </div>
-   </div>
-   <!-- secvices section End  -->
-
-
-
-
-   <!-- Modal -->
-   <div class="modal fade" id="enquireformModalCenter" tabindex="-1" role="dialog" aria-labelledby="exampleModalCenterTitle" aria-hidden="true">
-      <div class="modal-dialog modal-dialog-centered" role="document">
-         <div class="modal-content">
-            <div class="modal-header">
-            <b class="form-header-b">Enquire Now</b>
-            <button type="button" class="close" data-bs-dismiss="modal" aria-label="Close">
-               <span aria-hidden="true">&times;</span>
-            </button>
-            </div>
-            <div class="modal-body">
-               <div class="contact-form">	
-                  <form id="formf1" name="contact" action="contactform" method="POST">
-                     <div class="form-group"><span>Name</span>
-                        <input type="text" name="name" id="name" autocomplete="off" required>                
-                     </div>
-                     <!-- end form-group -->
-                     <div class="form-group">  <span>E-mail</span>
-                        <input type="text" name="email" id="email" autocomplete="off" pattern="[a-z0-9._%+-]+@[a-z0-9.-]+\.[a-z]{2,63}$" required>               
-                     </div>
-                     <!-- end form-group -->
-                     <div class="form-group">  <span>Phone Number</span>
-                        <input type="tel" id="tel" class="form-control custfield custfieldphone LoNotSensitive" name="phone" pattern="[6-9]{1}[0-9]{9}" required>          
-                     </div>
-                     <div>
-                        <input type="hidden" name="formid" value="HeaderForm">
-                     </div>
-                     <!-- end form-group -->
-                     <div class="form-group text-center">
-                     <button type="button" data-bs-toggle="modal" data-bs-target="#enquireformModalCenter" class="button-btn mt-4">submit
-                                 <span><i class="fas fa-angle-double-right"></i></span>
-                              </button>
-                     </div>
-                     <!-- end form-group -->
-                     </form>
-                     <!-- end form -->
-               </div>
-            </div>
-         </div>
-      </div>
-   </div>
-   <!-- index 02 emergency section start -->
-   <div class="emergency2-main-wrapper float_left">
-      <div class="container-fluid">
-         <div class="row">
-            <div class="col-lg-4 col-md-12 col-sm-12 col-12 p-0">
-               <div class="video-section">
-               </div>
-            </div>
-            <div class="col-lg-8 col-md-12 col-sm-12 col-12 p-0">
-               <div class="sb-emergency-section">
-                  <div class="content">
-                     <span><i class="fas fa-headphones-alt"></i></span>
-                     <h4>Online consultation and virtual assistance </h4>
-                  </div>
-                  <p>At Dental Stories, we believe in facilitating your dental needs through all viable modes of communication .
-                  </p>
-                  <div class="content">
-                     <span><i class="fas fa-phone"></i></span>
-                     <a href="tel:+91-9820929308" class="cta-a">
-                        +91 9820929308
-                     </a>
-                  </div>
-                  <!-- <img src="images/emergency2.png " class="d-none d-md-block d-lg-block d-xl-block" alt="img"> -->
-               </div>
-            </div>
-         </div>
-      </div>
-   </div>
-   <!-- index 02 emergency section end -->
-   
-   <!-- emergency section start -->
-   <!-- <div class="emergency-main-wrapper">
-      <div class="container">
-         <div class="row">
-            <div class="col-lg-12 col-md-12 col-sm-12 col-12">
-               <div class="sb-emergency-main-wrapper ">
-                  <div class="content">
-                     <span><i class="fas fa-headphones-alt"></i></span>
-                     <h4>Experience Gentle Dental Care</h4>
-                  </div>
-                  <p>
-                     <ul>
-                        <li class="ds-em-li">LET’S TAKE CARE OF YOUR PRECIOUS SMILE</li>
-                        <li class="ds-em-li">PUT YOUR ORAL HEALTH FIRST</li>
-                        <li class="ds-em-li">CONSULT AT YOUR CONVENIENCE</li>
-                     </ul>
-                  </p>
-               </div>
-            </div>
-         </div>
-      </div>
-   </div> -->
-   <!-- emergency section end -->
-
-   <!-- gallery section start  -->
-   <div class="gallery-sec">
-      <h6 class="home1-section-heading1">Gallery</h6>
-      <!-- <p class="ds-a"> Experience Top-notch Dentistry at Our Clinic </p> -->
-      <div class="gallery-image">
-        <!-- <div class="img-box">
-          <img src="assets/images/dental-stories-gallery-image-1.jpg" alt="" />
-        </div> -->
-        <div class="img-box">
-          <img src="assets/images/dental-stories-gallery-image-2.jpg" alt="" />
         </div>
-        <div class="img-box">
-          <img src="assets/images/dental-stories-gallery-image-3.jpg" alt="" />
-        </div>
-        <div class="img-box">
-          <img src="assets/images/dental-stories-gallery-image-4.jpg" alt="" />
-        </div>
-        <div class="img-box">
-         <img src="assets/images/dental-stories-gallery-image-5.jpg" alt="" />
-       </div>
-        <div class="img-box">
-          <img src="assets/images/dental-stories-gallery-image-6.jpg" alt="" /> 
-        </div>
-      </div>
-   </div>
-   <!-- gallery section end  -->
-
-
-   <!-- Start Appointment Section starts -->
-   <div class="Site-inner">
-      <div class="cont-outer">
-         <div class="main-contact-sec">
-            <div class="col-lg-12 af-2">
-               <div class="container ds-cd-sec">
-                  <div class="mcs-details">
-                     <iframe class="cu-loc-iframe"
-                        src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3770.068129567811!2d72.83451107520608!3d19.104666882105835!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3be7c9a72713a289%3A0xcf70f52e72369fdb!2sDental%20Stories!5e0!3m2!1sen!2sin!4v1694597043598!5m2!1sen!2sin"
-                        width="180%" height="450" style="border:0;" allowfullscreen="" loading="lazy"
-                        referrerpolicy="no-referrer-when-downgrade"></iframe>
-                  </div>
-               </div>
-            </div>
-         </div>
-      </div>
-   </div>
-
-   <!-- Start Appointment Section ends -->
+    </div>
+</div>
 
 
 
