Srushti: Phone no, icons, email minor changes

--- a/contact-us.html
+++ b/contact-us.html
@@ -25,13 +25,13 @@
    <link rel="stylesheet" type="text/css" href="css/responsive.css" />
    <link rel="stylesheet" type="text/css" href="assets/css/responsive.css" />
    <!--favicon-->
-   <link rel="shortcut icon" type="image/png" href="images/fav-icon.png" />
+   <link rel="shortcut icon" type="image/png" href="assets/images/android-icon-48x48.png" />
 </head>
 
 <body>
    <div id="preloader">
       <div id="status">
-         <img src="assets/images/dental_stories_logo_ani.gif" id="preloader_image" alt="loader">
+         <img src="assets/images/DS-logo-ani-1.gif" id="preloader_image" alt="loader">
       </div>
    </div>
    <!-- top to return -->
@@ -45,7 +45,7 @@
                   <div class="col-lg-6 col-md-6 col-sm-6 col-7">
                      <div class="sb-top-left-section">
                         <div>
-                           <a href="/mailto:jenish.endo@gmail.com" class="ds-a email-a"><span><i class="fas fa-envelope"></i></span>&nbsp;
+                           <a href="mailto:jenish.endo@gmail.com" class="ds-a email-a"><span><i class="fas fa-envelope"></i></span>&nbsp;
                               &nbsp;jenish.endo@gmail.com</a>
                         </div>
                      </div>
@@ -310,15 +310,15 @@
             <div class="col-lg-4 col-md-6 col-sm-12 col-12">
                <div class="sb-footer-section">
                   <ul>
-                     <li><a href="javascript:;" class="ds-a"><i class="fas fa-map-marker-alt"  id="fc-list"></i>ADDRESS<br>
+                     <li><a href="https://maps.app.goo.gl/vohu6eKx8xWegHPd7" class="ds-a"><i class="fas fa-map-marker-alt"  id="fc-list"></i>ADDRESS<br>
                      Ground Floor, Sumitra Sadan, N.S. Rd No. 1
                      Vile Parle Kelwani Mandal, opp. Mithibai College
                      Vile Parle (West) Mumbai 400056</a>
                      </li>
-                     <li><a href="javascript:;" class="ds-a"><i class="fas fa-phone"></i>PHONE<br>
+                     <li><a href="tel:+91-9820929308" class="ds-a"><i class="fas fa-phone"></i>PHONE<br>
                            +91 9820929308</a>
                      </li>
-                     <li><a href="/mailto:jenish.endo@gmail.com" class="ds-a"><i class="fas fa-envelope"></i>EMAIL<br>
+                     <li><a href="mailto:jenish.endo@gmail.com" class="ds-a"><i class="fas fa-envelope"></i>EMAIL<br>
                         jenish.endo@gmail.com</a>
                      </li>
                   </ul>
@@ -342,7 +342,7 @@
                   <p class="ds-a">© Copyright 2023 - by <a href="">Dental Stories</a>  | All Rights Reserved.</p>
                </div>
                <div class="col-lg-6 col-md-12 col-sm-12 col-12">
-                  <p class="last-para ds-a">Privacy Policy</p>
+                  <p class="last-para ds-a"><a href="privacy-policy">Privacy Policy</a></p>
                </div>
             </div>
          </div>
