--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
    <link rel="stylesheet" type="text/css" href="css/responsive.css" />
    <link rel="stylesheet" type="text/css" href="assets/css/responsive.css" />
    <!--favicon-->
-   <!-- <link rel="shortcut icon" type="image/png" href="images/fav-icon.png" /> -->
+   <link rel="shortcut icon" type="image/png" href="assets/images/android-icon-48x48.png" />
 </head>
 
 <body>
@@ -41,7 +41,7 @@
                   <div class="col-lg-6 col-md-6 col-sm-6 col-7">
                      <div class="sb-top-left-section">
                         <div>
-                           <a href="/mailto:jenish.endo@gmail.com" class="ds-a email-a"><span><i class="fas fa-envelope"></i></span>&nbsp;
+                           <a href="mailto:jenish.endo@gmail.com" class="ds-a email-a"><span><i class="fas fa-envelope"></i></span>&nbsp;
                               &nbsp;jenish.endo@gmail.com</a>
                         </div>
                      </div>
@@ -73,7 +73,7 @@
                         <ul>
                            <li>
                               <a href="contact"><i class="fas fa-phone"></i></a>
-                              <a href="contact" href="tel:+91-8448449833" class="ds-a">Call Us<br>
+                              <a href="contact" href="tel:+918448449833" class="ds-a">Call Us<br>
                                  +91 9820929308
                               </a>
                            </li>
@@ -278,9 +278,11 @@
                            <div class="slider-box">
                               <h5 class="ds-a">Endodontics Dentistry</h5>
                               <p class="ds-a">Regular dental check-ups, cleanings, and examinations promote optimal oral health.</p>
-                              <button type="button" data-bs-toggle="modal" data-bs-target="#enquireformModalCenter" class="button-btn mt-4">book now
-                                 <span><i class="fas fa-angle-double-right"></i></span>
-                              </button>
+                              <a href="book-appointment">
+                                 <button type="button" data-bs-toggle="modal" data-bs-target="book-appointment" class="button-btn mt-4">book now
+                                    <span><i class="fas fa-angle-double-right"></i></span>
+                                 </button>
+                              </a>
                            </div>
                         </div>
                         <div class="item">
@@ -288,18 +290,22 @@
                               <h5 class="ds-a">Conservative Dentistry</h5>
                               <p class="ds-a">Passionate about smile enhancement through cosmetic dental treatments.
                               </p>
-                              <button type="button" data-bs-toggle="modal" data-bs-target="#enquireformModalCenter" class="button-btn mt-4">book now
-                                 <span><i class="fas fa-angle-double-right"></i></span>
-                              </button>
+                              <a href="book-appointment">
+                                 <button type="button" data-bs-toggle="modal" data-bs-target="#enquireformModalCenter" class="button-btn mt-4">book now
+                                    <span><i class="fas fa-angle-double-right"></i></span>
+                                 </button>
+                              </a>
                            </div>
                         </div>
                         <div class="item">
                            <div class="slider-box wow fadeInUp" data-wow-delay=".35s">
                               <h5 class="ds-a">Pediatric Dentistry</h5>
                               <p class="ds-a"> Pediatric dentists offer compassionate, positive dental care for children.</p>
-                              <button type="button" data-bs-toggle="modal" data-bs-target="#enquireformModalCenter" class="button-btn mt-4">book now
-                                 <span><i class="fas fa-angle-double-right"></i></span>
-                              </button>
+                              <a href="book-appointment">
+                                 <button type="button" data-bs-toggle="modal" data-bs-target="#enquireformModalCenter" class="button-btn mt-4">book now
+                                    <span><i class="fas fa-angle-double-right"></i></span>
+                                 </button>
+                              </a>
                            </div>
                         </div>
                      </div>
@@ -373,7 +379,7 @@
                   </p>
                   <div class="content">
                      <span><i class="fas fa-phone"></i></span>
-                     <a href="tel:+91-9820929308" class="cta-a">
+                     <a href="tel:+9198209 29308" class="cta-a">
                         +91 9820929308
                      </a>
                   </div>
@@ -498,15 +504,15 @@
             <div class="col-lg-4 col-md-6 col-sm-12 col-12">
                <div class="sb-footer-section">
                   <ul>
-                     <li><a href="javascript:;" class="ds-a"><i class="fas fa-map-marker-alt" id="fc-list"></i>ADDRESS<br>
+                     <li><a href="https://maps.app.goo.gl/vohu6eKx8xWegHPd7" class="ds-a"><i class="fas fa-map-marker-alt" id="fc-list"></i>ADDRESS<br>
                      Ground Floor, Sumitra Sadan, N.S. Rd No. 1
                      Vile Parle Kelwani Mandal, opp. Mithibai College
                      Vile Parle (West) Mumbai 400056</a>
                      </li>
-                     <li><a href="javascript:;" class="ds-a"><i class="fas fa-phone"></i>PHONE<br>
+                     <li><a href="tel:+91-9820929308" class="ds-a"><i class="fas fa-phone"></i>PHONE<br>
                            +91 9820929308</a>
                      </li>
-                     <li><a href="/mailto:jenish.endo@gmail.com" class="ds-a"><i class="fas fa-envelope"></i>EMAIL<br>
+                     <li><a href="mailto:jenish.endo@gmail.com" class="ds-a"><i class="fas fa-envelope"></i>EMAIL<br>
                         jenish.endo@gmail.com</a>
                      </li>
                   </ul>
