--- a/book-appointment.html
+++ b/book-appointment.html
@@ -20,13 +20,13 @@
    <link rel="stylesheet" type="text/css" href="css/responsive.css" />
    <link rel="stylesheet" type="text/css" href="assets/css/responsive.css" />
    <!--favicon-->
-   <!-- <link rel="shortcut icon" type="image/png" href="images/fav-icon.png" /> -->
+   <link rel="shortcut icon" type="image/png" href="assets/images/android-icon-48x48.png" />
 </head>
 
 <body>
    <div id="preloader">
       <div id="status">
-         <img src="assets/images/dental_stories_logo_ani.gif" id="preloader_image" alt="loader">
+         <img src="assets/images/DS-logo-ani-1.gif" id="preloader_image" alt="loader">
       </div>
    </div>
    <!-- top to return -->
@@ -41,7 +41,7 @@
                   <div class="col-lg-6 col-md-6 col-sm-6 col-7">
                      <div class="sb-top-left-section">
                         <div>
-                           <a href="/mailto:jenish.endo@gmail.com" class="ds-a email-a"><span><i class="fas fa-envelope"></i></span>&nbsp;
+                           <a href="mailto:jenish.endo@gmail.com" class="ds-a email-a"><span><i class="fas fa-envelope"></i></span>&nbsp;
                               &nbsp;jenish.endo@gmail.com</a>
                         </div>
                      </div>
@@ -67,7 +67,7 @@
                               </a>
                            </li>
                            <li class="border-none pe-0">
-                              <a href="contact"><i class="fas fa-map-marker-alt"></i></a>
+                              <a href="contact"><i class="fas fa-clock-o"></i></a>
                               <a href="contact" class="ds-a">Monday - Saturday<br>
                               10 AM - 2 PM ; 5 PM - 9 PM</a>
                            </li>
