--- a/privacy-policy.html
+++ b/privacy-policy.html
@@ -20,15 +20,15 @@
    <link rel="stylesheet" type="text/css" href="css/responsive.css" />
    <link rel="stylesheet" type="text/css" href="assets/css/responsive.css" />
    <!--favicon-->
-   <!-- <link rel="shortcut icon" type="image/png" href="images/fav-icon.png" /> -->
+   <link rel="shortcut icon" type="image/png" href="assets/images/android-icon-48x48.png" />
 </head>
 
 <body>
-   <div id="preloader">
-      <div id="status">
-         <img src="assets/images/DS-logo-ani-1.gif" id="preloader_image" alt="loader">
-      </div>
-   </div>
+    <div id="preloader">
+        <div id="status">
+           <img src="assets/images/DS-logo-ani-1.gif" id="preloader_image" alt="loader">
+        </div>
+     </div>
    <!-- top to return -->
    <!-- <a href="javascript:;" id="return-to-top"><i class="fas fa-angle-double-up"></i></a> -->
    
@@ -41,7 +41,7 @@
                   <div class="col-lg-6 col-md-6 col-sm-6 col-7">
                      <div class="sb-top-left-section">
                         <div>
-                           <a href="/mailto:jenish.endo@gmail.com" class="ds-a email-a"><span><i class="fas fa-envelope"></i></span>&nbsp;
+                           <a href="mailto:jenish.endo@gmail.com" class="ds-a email-a"><span><i class="fas fa-envelope"></i></span>&nbsp;
                               &nbsp;jenish.endo@gmail.com</a>
                         </div>
                      </div>
@@ -173,19 +173,19 @@
    <!-- header end -->
 
 
-   <div class="pp-3s">
+<section class="pp-3s">
     <div class="container">
-        <div class="row mainrow1">
+        <div class="row mainrow2">
             <div class="col-lg-12 maincol2 ab1">
                 <h2 class="ab-th1">Privacy Policy</h2>
-                <h5>Introduction</h5>
+                <h5 class="pp-h5">Introduction</h5>
                 <p class="ab-th2 ds-a">Welcome to Dental Stories, an online platform where users can share and read stories and experiences related to dental health. At Dental Stories, we are committed to protecting your privacy and ensuring the security of your personal information. This Privacy Policy outlines how we collect, use, 
                     disclose, and safeguard your personal information when you visit our website or use our services.</p>
                 <p class="ab-th2 ds-a">By accessing or using the Dental Stories website and its services, you consent to the practices described in this Privacy Policy. 
                     If you do not agree with our practices, please do not use our Site or Services.</p>
             </div>
             <div class="col-lg-12 maincol2 ab1">
-                <h5>Private information</h5>
+                <h5 class="pp-h5">Private information</h5>
                 <p class="ab-th2 ds-a">We may collect and store the following types of information when you use our Site and Services:</p>
                 <p class="ab-th2 ds-a">
                     <ol>
@@ -205,7 +205,7 @@
                 </p>
             </div>
             <div class="col-lg-12 maincol2 ab1">
-                <h5>How We Use Your Information</h5>
+                <h5 class="pp-h5">How We Use Your Information</h5>
                 <p class="ab-th2 ds-a">We may share your information with: </p>
                 <p class="ab-th2 ds-a">
                     <ol>
@@ -216,19 +216,41 @@
                 </p>
             </div>
             <div class="col-lg-12 maincol2 ab1">
-                <h5>Your Choices  </h5>
+                <h5 class="pp-h5">Your Choices  </h5>
                 <p class="ab-th2 ds-a">You can manage your personal information and communication preferences as follows:  </p>
                 <p class="ab-th2 ds-a">
                     <ol>
                         <li>Account settings: You can access and update your account information through your account settings.</li>
-                        <li>Legal authorities: To comply with legal obligations, such as responding to legal requests and preventing fraud</li>
-                        <li>Affiliates and partners: With your consent, we may share your information with trusted affiliates and partners for marketing or promotional purposes</li>
+                        <li>Email preferences: You can opt-out of promotional emails by following the instructions provided in our emails.</li>
+                        <li>Cookies: You can manage cookie settings in your browser.</li>
                     </ol>
+                </p>
+            </div>
+            <div class="col-lg-12 maincol2 ab1">
+                <h5 class="pp-h5">Security</h5>
+                <p class="ab-th2 ds-a">We take reasonable measures to protect your personal information, but please be aware that no method of transmission over the internet or electronic storage is completely secure. We cannot guarantee the security of your information.</p>
+            </div>
+            <div class="col-lg-12 maincol2 ab1">
+                <h5 class="pp-h5">Children's Privacy</h5>
+                <p class="ab-th2 ds-a">Our Site and Services are not intended for children under the age of 13. We do not knowingly collect or solicit personal information from anyone under 13 years of age. If you believe we have collected personal information from a child under 13, please contact us, and we will promptly remove such information.
+                </p>
+            </div>
+            <div class="col-lg-12 maincol2 ab1">
+                <h5 class="pp-h5"> Changes to this Privacy Policy</h5>
+                <p class="ab-th2 ds-a">We may update this Privacy Policy to reflect changes in our practices or for other operational, legal, or regulatory reasons. We will post any revised Privacy Policy on this page, and the date of the last update will be prominently displayed at the top.
+                </p>
+            </div>
+            <div class="col-lg-12 maincol2 ab1">
+                <h5 class="pp-h5">Contact Us</h5>
+                <p class="ab-th2 ds-a">If you have any questions or concerns about this Privacy Policy or our data practices, please contact us.
+
+                    By using our Site and Services, you acknowledge that you have read and understood this Privacy Policy and agree to its terms. Your continued use of Dental Stories constitutes your acceptance of any changes to this Privacy Policy.
+                    
                 </p>
             </div>
         </div>
     </div>
-</div>
+</section>
 
 
 
@@ -271,15 +293,15 @@
             <div class="col-lg-4 col-md-6 col-sm-12 col-12">
                <div class="sb-footer-section">
                   <ul>
-                     <li><a href="javascript:;" class="ds-a"><i class="fas fa-map-marker-alt" id="fc-list"></i>ADDRESS<br>
+                     <li><a href="https://maps.app.goo.gl/vohu6eKx8xWegHPd7" class="ds-a"><i class="fas fa-map-marker-alt" id="fc-list"></i>ADDRESS<br>
                      Ground Floor, Sumitra Sadan, N.S. Rd No. 1
                      Vile Parle Kelwani Mandal, opp. Mithibai College
                      Vile Parle (West) Mumbai 400056</a>
                      </li>
-                     <li><a href="javascript:;" class="ds-a"><i class="fas fa-phone"></i>PHONE<br>
+                     <li><a href="tel:+91-9820929308" class="ds-a"><i class="fas fa-phone"></i>PHONE<br>
                            +91 9820929308</a>
                      </li>
-                     <li><a href="/mailto:jenish.endo@gmail.com" class="ds-a"><i class="fas fa-envelope"></i>EMAIL<br>
+                     <li><a href="mailto:jenish.endo@gmail.com" class="ds-a"><i class="fas fa-envelope"></i>EMAIL<br>
                         jenish.endo@gmail.com</a>
                      </li>
                   </ul>
@@ -301,9 +323,6 @@
             <div class="row">
                <div class="col-lg-6 col-md-12 col-sm-12 col-12">
                   <p class="ds-a">© Copyright 2023 - by <a href="">Dental Stories</a>  | All Rights Reserved.</p>
-               </div>
-               <div class="col-lg-6 col-md-12 col-sm-12 col-12">
-                  <p class="last-para ds-a"><a href="privacy-policy">Privacy Policy</a></p>
                </div>
             </div>
          </div>
